fix: address safe sonar issues